[CREATE] Audio upload to AliyunOSS and post answer, [FIX] bugs 1. post answer when audio not played completely, 2. audio control but after finish playing one audio

--- a/Casanova/Podfile
+++ b/Casanova/Podfile
@@ -8,5 +8,6 @@ target 'Casanova' do
   # Pods for Casanova
   pod 'Alamofire', '~> 4.4'
   pod 'TagListView', '~> 1.0'
+  pod 'AliyunOSSiOS', '~> 2.6.2'
 
 end
