--- a/Casanova/Casanova/Info.plist
+++ b/Casanova/Casanova/Info.plist
@@ -66,6 +66,10 @@
 		<string>Montserrat-Light.otf</string>
 		<string>Montserrat-Regular.otf</string>
 		<string>Montserrat-SemiBold.otf</string>
+		<string>SF-Pro-Text-Bold.otf</string>
+		<string>SF-Pro-Text-Light.otf</string>
+		<string>SF-Pro-Text-Regular.otf</string>
+		<string>SF-Pro-Text-Semibold.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
